--- a/FoundationDB.Storage.Memory.Test/FoundationDB.Storage.Memory.Test.csproj
+++ b/FoundationDB.Storage.Memory.Test/FoundationDB.Storage.Memory.Test.csproj
@@ -73,7 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FoundationDB.Client\FoundationDB.Client.csproj">
-      <Project>{773166b7-de74-4fcc-845c-84080cc89533}</Project>
+      <Project>{3c304841-c92c-40bf-b860-461b7825b887}</Project>
       <Name>FoundationDB.Client</Name>
     </ProjectReference>
     <ProjectReference Include="..\FoundationDB.Layers.Common\FoundationDB.Layers.Common.csproj">
@@ -84,6 +84,9 @@
       <Project>{cc98db39-31a1-4642-b4fc-9cb0ab26bf2e}</Project>
       <Name>FoundationDB.Storage.Memory</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
